# Return

./: CMakeLists.txt  ReturnDependencies.drawio  cmake_open.bat  cmake_run.bat  current_editor_thoughts.txt  random_thoughts.txt  todo.txt
data/: instanced.editor_state  many_triangles.scene
source/PlatformWrapper/: readme.txt
source/Return/: containers.h  element_buffer.h  file_system.cpp  file_system.h  graphics_components.cpp  graphics_components.h  graphics_manager.cpp  graphics_manager.h  graphics_test.cpp  graphics_test.h  imgui_helpers.cpp  imgui_helpers.h  main.cpp  scene.cpp  scene.h  shader.h  task_manager.cpp  task_manager.h  vertex_array_object.cpp  vertex_array_object.h  vertex_buffer.cpp  vertex_buffer.h  vertex_components.cpp  vertex_components.h
source/editor_support/include/editor_support/: fuzzy_search.h
source/editor_support/source/: file_dialog.cpp
source/file/include/file/: file.h
source/file/source/: file.cpp
source/game/: main.cpp
source/gfx/include/gfx/: batch_renderer.h  buffer_attributes.h  buffer_attributes.inl  debug_lines.h  element_buffer.h  gfx_forward.h  graphics_core.h  graphics_manager.h  image.h  lights.h  shader.h  texture.h  vertex_array_object.h  vertex_buffer.h
source/gfx/source/: batch_renderer.cpp  buffer_attributes.cpp  debug_lines.cpp  element_buffer.cpp  graphics_core.cpp  graphics_manager.cpp  image.cpp  shader.cpp  texture.cpp  vertex_array_object.cpp  vertex_buffer.cpp
source/maths/include/maths/: constants.h  geometry.h  maths.h  maths_forward.h  matrix.h  matrix.inl  quaternion.h  quaternion.inl  vector2.h  vector3.h  vector3.inl
source/maths/source/: placeholder.cpp
source/physics/include/physics/: colliders.h  collisions.h  physics_system.h  rigidbody.h
source/return/: camera.cpp  camera.h  containers.h  content_browser.cpp  dockspace.h  entity.h  file_dialog.cpp  file_dialog.h  fuzzy_search.cpp  fuzzy_search.h  graphics_test.cpp  graphics_test.h  imgui_helpers.cpp  imgui_helpers.h  input_manager.cpp  input_manager.h  lights.h  main.cpp  scene.cpp  scene.h  visual_component.cpp  visual_component.h
source/return_engine/include/return_engine/: camera.h  content_browser.h  entity.h  input_manager.h  main_loop.h  scene.h  task_manager.h  timer.h  visual_component.h  window.h
source/return_engine/source/: entity.cpp  input_manager.cpp  main_loop.cpp  scene.cpp  visual_component.cpp  window.cpp
source/test/: test_main.cpp
